Added municipalityId to all paths, updated the previous use of pathparam to pathvariable, just to keep it consistent.
