# src/main/java/se/sundsvall/emailreader/api/CredentialsResource.java
@@ -19,12 +19,12 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 import org.zalando.problem.Problem;
 
+import se.sundsvall.dept44.common.validators.annotation.ValidMunicipalityId;
 import se.sundsvall.dept44.common.validators.annotation.ValidUuid;
 import se.sundsvall.emailreader.api.model.Credentials;
 import se.sundsvall.emailreader.service.CredentialsService;
 
 import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
@@ -33,7 +33,7 @@ import io.swagger.v3.oas.annotations.tags.Tag;
 @RestController
 @Validated
 @Tag(name = "Credentials", description = "Credentials")
-@RequestMapping(path = "/credentials",
+@RequestMapping(path = "/{municipalityId}/credentials",
 	produces = {APPLICATION_JSON_VALUE, APPLICATION_PROBLEM_JSON_VALUE})
 @ApiResponse(
 	responseCode = "400",
@@ -55,74 +55,50 @@ class CredentialsResource {
 		this.credentialsService = credentialsService;
 	}
 
-	@Operation(
-		summary = "Get a list of credentials",
-		responses = {
-			@ApiResponse(
-				responseCode = "200",
-				description = "Ok",
-				useReturnTypeSchema = true)
-
-		})
+	@Operation(description = "Get a list of credentials")
+	@ApiResponse(responseCode = "200", description = "Ok", useReturnTypeSchema = true)
 	@GetMapping
-	public ResponseEntity<List<Credentials>> getAll() {
+	ResponseEntity<List<Credentials>> getAllByMunicipalityId(
+		@PathVariable("municipalityId") @ValidMunicipalityId final String municipalityId) {
 
-		return ResponseEntity.ok(credentialsService.getAllCredentials());
-
+		return ResponseEntity.ok(credentialsService.getCredentialsByMunicipalityId(municipalityId));
 	}
 
-	@Operation(
-		summary = "Create credentials",
-		responses = {
-			@ApiResponse(
-				responseCode = "204",
-				description = "No content")
-		})
+	@Operation(description = "Create credentials")
+	@ApiResponse(responseCode = "204", description = "No content")
 	@PostMapping(consumes = APPLICATION_JSON_VALUE)
-	public ResponseEntity<Void> create(@Valid @RequestBody final Credentials credentials) {
-
-		credentialsService.create(credentials);
-
-		return ResponseEntity.noContent().build();
-
-	}
-
-	@Operation(
-		summary = "Update credentials",
-		responses = {
-			@ApiResponse(
-				responseCode = "204",
-				description = "No content")
-		})
-	@PutMapping(path = "/{id}", consumes = APPLICATION_JSON_VALUE)
-	public ResponseEntity<Void> update(
-		@Parameter(name = "id",
-			description = "Email message ID",
-			example = "81471222-5798-11e9-ae24-57fa13b361e1") @ValidUuid @PathVariable("id") final String id,
+	ResponseEntity<Void> create(
+		@PathVariable("municipalityId") @ValidMunicipalityId final String municipalityId,
 		@Valid @RequestBody final Credentials credentials) {
 
-		credentialsService.update(id, credentials);
+		credentialsService.create(municipalityId, credentials);
 
 		return ResponseEntity.noContent().build();
-
 	}
 
-	@Operation(
-		summary = "Delete credentials by id",
-		responses = {
-			@ApiResponse(
-				responseCode = "204",
-				description = "No content")
-		})
-	@DeleteMapping(path = "/{id}")
-	public ResponseEntity<Void> delete(@Parameter(name = "id",
-		description = "Email message ID",
-		example = "81471222-5798-11e9-ae24-57fa13b361e1") @ValidUuid @PathVariable("id") final String id) {
+	@Operation(description = "Update credentials")
+	@ApiResponse(responseCode = "204", description = "No content")
+	@PutMapping(path = "/{id}", consumes = APPLICATION_JSON_VALUE)
+	ResponseEntity<Void> update(
+		@PathVariable("municipalityId") @ValidMunicipalityId final String municipalityId,
+		@PathVariable("id") @Schema(description = "Email message ID", example = "81471222-5798-11e9-ae24-57fa13b361e1") @ValidUuid final String id,
+		@Valid @RequestBody final Credentials credentials) {
 
-		credentialsService.delete(id);
+		credentialsService.update(municipalityId, id, credentials);
 
 		return ResponseEntity.noContent().build();
+	}
 
+	@Operation(description = "Delete credentials by id")
+	@ApiResponse(responseCode = "204", description = "No content")
+	@DeleteMapping(path = "/{id}")
+	ResponseEntity<Void> delete(
+		@PathVariable("municipalityId") @ValidMunicipalityId final String municipalityId,
+		@PathVariable("id") @Schema(description = "Email message ID", example = "81471222-5798-11e9-ae24-57fa13b361e1") @ValidUuid final String id) {
+
+		credentialsService.delete(municipalityId, id);
+
+		return ResponseEntity.noContent().build();
 	}
 
 }
